Setup includes and layouts, create new collections

--- a/_config.yml
+++ b/_config.yml
@@ -32,11 +32,28 @@ plugins:
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+  - Makefile
+
+collections:
+- page
+- project
+
+defaults:
+  - scope:
+      path: ""
+      type: "page"
+    values:
+      layout: "default"
+  - scope:
+      path: ""
+      type: "project"
+    values:
+      layout: "default"
