--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Laura Lechner | Filmmaker
+email: laura@lauralechner.com 
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Laura Lechner is a filmmaker based in New York City 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+linkedin_url: https://www.linkedin.com/in/lalechner
+vimeo_url: https://vimeo.com/lauralechner
+facebook_url: https://www.facebook.com/kimthefilm/?fref=ts
 
 # Build settings
 markdown: kramdown
@@ -59,3 +58,6 @@ defaults:
       type: "project"
     values:
       layout: "default"
+
+sass:
+  sass_dir: _scss
