--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: laura@lauralechner.com
 description: >- # this means to ignore newlines until "baseurl:"
   Laura Lechner is a filmmaker based in New York City 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://nbuonin.github.io/lauralechner-2" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_url: https://www.linkedin.com/in/lalechner
 vimeo_url: https://vimeo.com/lauralechner
 facebook_url: https://www.facebook.com/kimthefilm/?fref=ts
